Correct spelling: virutal -> virtual

--- a/hosting/templates/hosting/emails/vm_canceled.html
+++ b/hosting/templates/hosting/emails/vm_canceled.html
@@ -25,7 +25,7 @@
         <tr>
             <td style="padding-top: 25px; font-size: 16px;">
                 <p style="line-height: 1.75; font-family: Lato, Arial, sans-serif; font-weight: 300; margin: 0;">
-                    {% blocktrans %}You are receiving this email because your virutal machine <strong>{{ vm_name }}</strong> has been cancelled.{% endblocktrans %}
+                    {% blocktrans %}You are receiving this email because your virtual machine <strong>{{ vm_name }}</strong> has been cancelled.{% endblocktrans %}
                 </p>
                 <p style="line-height: 1.75; font-family: Lato, Arial, sans-serif; font-weight: 300; margin: 0;">
                     {% blocktrans %}You can always order a new VM by clicking the button below.{% endblocktrans %}
