use new copyright footers, use i8ln for it

--- a/digitalglarus/templates/new_base_glarus.html
+++ b/digitalglarus/templates/new_base_glarus.html
@@ -217,7 +217,7 @@
       <div class="container">
     <div class="row">
       <div class="col-md-4">
-        <span class="copyright">Copyright © ungleich GmbH  {% now "Y" %}</span>
+        <span class="copyright">Copyright © ungleich glarus ag  {% now "Y" %}</span>
       </div>
       <div class="col-md-4">
         <ul class="list-inline social-buttons">
