--- a/digitalglarus/templates/new_base_glarus_c.html
+++ b/digitalglarus/templates/new_base_glarus_c.html
@@ -232,7 +232,7 @@
       <div class="container">
     <div class="row">
       <div class="col-md-4">
-        <span class="copyright">Copyright © ungleich GmbH 2016</span>
+        <span class="copyright">{% trans "Copyright © ungleich glarus ag" %} {% now "Y" %}</span>
       </div>
       <div class="col-md-4">
         <ul class="list-inline social-buttons">
