--- a/ungleich/templates/cms/ungleichch/_footer.html
+++ b/ungleich/templates/cms/ungleichch/_footer.html
@@ -1,4 +1,5 @@
 {% load cms_tags %}
+{% load i18n %}
 <hr />
 <!-- Footer -->
 <footer>
@@ -40,7 +41,7 @@
 	  </li>
 	</ul>
 	<p class="copyright">
-	  Copyright © ungleich GmbH  {% now "Y" %}
+	  {% trans "Copyright © ungleich glarus ag" %} {% now "Y" %}
 	</p>
       </div>
     </div>
