--- a/ungleich_page/templates/ungleich_page/includes/_footer.html
+++ b/ungleich_page/templates/ungleich_page/includes/_footer.html
@@ -5,7 +5,7 @@
 	<div class="container">
 		<div class="row">
 		  <div class="col-md-4">
-		    <span class="copyright">{% trans "Copyright © ungleich GmbH " %} {% now "Y" %}</span>
+		    <span class="copyright">{% trans "Copyright © ungleich glarus ag" %} {% now "Y" %}</span>
 		  </div>
 		  <div class="col-md-4">
 		    <ul class="list-inline social-buttons">
