Update min attribute according to minimum ram in the plugin

--- a/datacenterlight/templates/datacenterlight/includes/_calculator_form.html
+++ b/datacenterlight/templates/datacenterlight/includes/_calculator_form.html
@@ -10,6 +10,7 @@
         window.hddUnitPrice = {{vm_pricing.hdd_unit_price|default:0}};
         window.discountAmount = {{vm_pricing.discount_amount|default:0}};
         window.minRam = {{min_ram}};
+        window.minRamErr = '{% blocktrans with min_ram=min_ram %}Please enter a value in range {{min_ram}} - 200.{% endblocktrans %}';
     </script>
 {% endif %}
 
@@ -56,7 +57,7 @@
         <div class="form-group">
             <div class="description input">
                 <i class="fa fa-minus-circle left" data-minus="ram" aria-hidden="true"></i>
-                <input id="ramValue" class="input-price select-number" type="number" min="{{min_ram}}" max="200" name="ram"
+                <input id="ramValue" class="input-price select-number" type="number" min="{% if min_ram %}0{% else %}1{% endif %}" max="200" name="ram"
                        data-error="{% blocktrans with min_ram=min_ram %}Please enter a value in range {{min_ram}} - 200.{% endblocktrans %}" required step="any">
                 <span> GB RAM</span>
                 <i class="fa fa-plus-circle right" data-plus="ram" aria-hidden="true"></i>
