Show GenericPaymentForm labels

--- a/datacenterlight/templates/datacenterlight/landing_payment.html
+++ b/datacenterlight/templates/datacenterlight/landing_payment.html
@@ -74,7 +74,7 @@
                             {% csrf_token %}
                             <input type="hidden" name="product" value="1" />
                             {% for field in generic_payment_form %}
-                            {% bootstrap_field field show_label=False type='fields'%}
+                            {% bootstrap_field field type='fields'%}
                             {% endfor %}
                             <p class="text-danger">{{generic_payment_form.non_field_errors|striptags}}</p>
                         </form>
